--- a/DsWorkAndroid/res/layout/demo_add_a.xml
+++ b/DsWorkAndroid/res/layout/demo_add_a.xml
@@ -8,14 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".DemoUpdActivity" >
-    
-    
-	<TextView
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:visibility="gone"
-		android:id="@+id/id"/>
+    tools:context=".DemoAddA" >
+
     <LinearLayout 
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -60,7 +54,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/btn_save"
-        android:id="@+id/btn_save"
-        android:onClick="save"/>
+        android:id="@+id/btn_save"/>
 
 </LinearLayout>
