--- a/DsWorkAndroid/res/layout/demo_search_a.xml
+++ b/DsWorkAndroid/res/layout/demo_search_a.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".DemoAddActivity" >
+    tools:context=".DemoSearchA" >
 
     <LinearLayout 
         android:orientation="horizontal"
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/btn_save"
-        android:id="@+id/btn_save"/>
+        android:text="@string/btn_search"
+        android:id="@+id/btn_search"/>
 
 </LinearLayout>
