--- a/DsWorkAndroid/res/layout/demo_upd_a.xml
+++ b/DsWorkAndroid/res/layout/demo_upd_a.xml
@@ -7,25 +7,15 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    tools:context=".DemoDetailActivity" >
-
-    <LinearLayout 
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-		<TextView
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="@string/id" />
-		<TextView
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="：" />
-		<TextView 
-		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:id="@+id/id"/>
-    </LinearLayout>
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".DemoUpdA" >
+    
+    
+	<TextView
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:visibility="gone"
+		android:id="@+id/id"/>
     <LinearLayout 
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -34,11 +24,7 @@
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:text="@string/title" />
-		<TextView
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="：" />
-		<TextView 
+		<EditText 
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
 		    android:id="@+id/title"/>
@@ -51,11 +37,7 @@
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:text="@string/content" />
-		<TextView
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="：" />
-		<TextView 
+		<EditText 
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
 		    android:id="@+id/content"/>
@@ -68,14 +50,17 @@
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:text="@string/foundtime" />
-		<TextView
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="：" />
-		<TextView 
+		<EditText 
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
 		    android:id="@+id/foundtime"/>
     </LinearLayout>
+    <Button 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/btn_save"
+        android:id="@+id/btn_save"
+        android:onClick="save"/>
 
 </LinearLayout>
