--- a/DsWorkAndroid/res/menu/context_menu.xml
+++ b/DsWorkAndroid/res/menu/context_menu.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item 
-        android:id="@+id/menu_upd" 
-        android:icon="@android:drawable/ic_menu_edit"/>
-    <item 
         android:id="@+id/menu_del" 
         android:icon="@android:drawable/ic_menu_delete">
         <menu>
@@ -15,4 +12,8 @@
 		        android:title="@string/confirm"/>
         </menu>
     </item>
+    <item 
+        android:id="@+id/menu_chkall" 
+        android:icon="@drawable/btn_check_off_holo_light"
+        android:checkable="true"/>
 </menu>
