--- a/DsCommon/.settings/org.eclipse.wst.common.component
+++ b/DsCommon/.settings/org.eclipse.wst.common.component
@@ -4,9 +4,10 @@
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/common"/>
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
 		<wb-resource deploy-path="/" source-path="/web"/>
-		<wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.dict"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.dict"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.org"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.rbac"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.user"/>
 		<property name="context-root" value="web"/>
 		<property name="java-output-path" value="/DsCommon/web/WEB-INF/classes"/>
 	</wb-module>
