--- a/DsCommon/.settings/org.eclipse.wst.common.component
+++ b/DsCommon/.settings/org.eclipse.wst.common.component
@@ -3,12 +3,12 @@
 	<wb-module deploy-name="DsCommon">
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/common"/>
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
-		<wb-resource deploy-path="/" source-path="/web"/>
+		<wb-resource deploy-path="/" source-path="/web" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.dict"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.org"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.rbac"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.user"/>
-		<property name="context-root" value="web"/>
+		<property name="context-root" value="DsCommon"/>
 		<property name="java-output-path" value="/DsCommon/web/WEB-INF/classes"/>
 	</wb-module>
 </project-modules>
