--- a/DsCommon/.settings/org.eclipse.wst.common.component
+++ b/DsCommon/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
 	<wb-module deploy-name="DsCommon">
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/common"/>
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
@@ -8,6 +7,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.org"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.rbac"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.user"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.permit"/>
 		<property name="context-root" value="DsCommon"/>
 		<property name="java-output-path" value="/DsCommon/web/WEB-INF/classes"/>
 	</wb-module>
