--- a/DsWorkAndroid/res/layout/person_get_a.xml
+++ b/DsWorkAndroid/res/layout/person_get_a.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent">
 	<LinearLayout
 	    android:orientation="vertical"
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent">
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent" >
 		<LinearLayout
 		    android:orientation="horizontal"
 		    android:background="@color/gray"
@@ -21,8 +21,12 @@
 			<TextView 
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
-			    android:layout_marginLeft="30dp"
-			    android:text="@string/title"/>
+	   			android:layout_marginLeft="35dp"
+			    android:text="@string/name"/>
+			<TextView 
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:text="@string/sortkey"/>
 		</LinearLayout>
 	    <dswork.android.lib.ui.MultiCheck.MultiCheckListView
 	        android:id="@+id/listView" 
