--- a/DsWorkAndroid/res/layout/demo_add_a.xml
+++ b/DsWorkAndroid/res/layout/demo_add_a.xml
@@ -8,8 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".DemoAddA" >
-
+    tools:context=".DemoAdd_A" >
     <LinearLayout 
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -55,5 +54,4 @@
         android:layout_gravity="center"
         android:text="@string/btn_save"
         android:id="@+id/btn_save"/>
-
 </LinearLayout>
