--- a/DsWorkAndroid/res/layout/demo_get_item.xml
+++ b/DsWorkAndroid/res/layout/demo_get_item.xml
@@ -12,11 +12,10 @@
 	    android:orientation="vertical"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-   		android:layout_marginLeft="20dp"
-	    android:layout_toRightOf="@id/item_ckb">
+   		android:layout_marginLeft="20dp">
 		<TextView 
 		    android:id="@+id/title"
-		    android:layout_width="120dp"
+		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:textSize="22sp"/>
 		<LinearLayout 
