--- a/DsWorkAndroid/res/layout/demo_search_a.xml
+++ b/DsWorkAndroid/res/layout/demo_search_a.xml
@@ -8,8 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".DemoSearchA" >
-
+    tools:context=".DemoSearch_A" >
     <LinearLayout 
         android:orientation="horizontal"
         android:layout_width="match_parent"
