--- a/DsWorkAndroid/res/layout/person_add_a.xml
+++ b/DsWorkAndroid/res/layout/person_add_a.xml
@@ -8,8 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".PersonAddActivity" >
-
+    tools:context=".PersonAdd_A" >
     <LinearLayout 
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -50,7 +49,7 @@
 		    android:id="@+id/amount"/>
     </LinearLayout>
     <Button 
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/btn_save"
