--- a/DsWorkAndroid/res/layout/person_get_item.xml
+++ b/DsWorkAndroid/res/layout/person_get_item.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
   	android:descendantFocusability="blocksDescendants">
   	<include 
-  	    android:id="@+id/item_ckb"
-  	    layout="@layout/item_chk" 
+  	    layout="@layout/item_id" 
   	    android:layout_width="wrap_content" 
   	    android:layout_height="wrap_content"
-  	    android:layout_alignParentLeft="true"/>
+	    android:layout_alignParentLeft="true"/>
   	<LinearLayout 
   	    android:orientation="horizontal"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
-   		android:layout_marginLeft="20dp"
-	    android:layout_toRightOf="@id/item_ckb">
+   		android:layout_marginLeft="20dp">
 		<TextView 
-		    android:layout_width="120dp"
-		    android:layout_height="50dp"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
 		    android:textSize="22sp"
 		    android:id="@+id/name"/>
 		<TextView 
 		    android:layout_width="wrap_content"
-		    android:layout_height="50dp"
+		    android:layout_height="wrap_content"
 		    android:textSize="22sp"
 		    android:id="@+id/sortkey"/>
   	</LinearLayout>
@@ -30,5 +28,10 @@
 	    layout="@layout/item_menu" 
 	    android:layout_width="wrap_content" 
 	    android:layout_height="wrap_content"
+	    android:layout_alignParentRight="true"/>
+  	<include 
+  	    layout="@layout/item_chk" 
+  	    android:layout_width="wrap_content" 
+  	    android:layout_height="wrap_content"
 	    android:layout_alignParentRight="true"/>
 </RelativeLayout>
