--- a/DsWorkAndroid/res/layout/person_getbyid_a.xml
+++ b/DsWorkAndroid/res/layout/person_getbyid_a.xml
@@ -31,7 +31,7 @@
 			<TextView
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
-			    android:text="@string/title" />
+			    android:text="@string/name" />
 			<TextView
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
 			<TextView 
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content"
-			    android:id="@+id/title"/>
+			    android:id="@+id/name"/>
 	    </LinearLayout>
 	    <LinearLayout 
 	        android:orientation="horizontal"
@@ -48,7 +48,7 @@
 			<TextView
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
-			    android:text="@string/content" />
+			    android:text="@string/sortkey" />
 			<TextView
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
 			<TextView 
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content"
-			    android:id="@+id/content"/>
+			    android:id="@+id/sortkey"/>
 	    </LinearLayout>
 	    <LinearLayout 
 	        android:orientation="horizontal"
@@ -65,7 +65,7 @@
 			<TextView
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
-			    android:text="@string/foundtime" />
+			    android:text="@string/phone" />
 			<TextView
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
@@ -73,7 +73,24 @@
 			<TextView 
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content"
-			    android:id="@+id/foundtime"/>
+			    android:id="@+id/phone"/>
+	    </LinearLayout>
+	    <LinearLayout 
+	        android:orientation="horizontal"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content">
+			<TextView
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:text="@string/amount" />
+			<TextView
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:text="：" />
+			<TextView 
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:id="@+id/amount"/>
 	    </LinearLayout>
 	</LinearLayout>
 </FrameLayout>
