--- a/DsWorkAndroid/res/layout/person_upd_a.xml
+++ b/DsWorkAndroid/res/layout/person_upd_a.xml
@@ -14,15 +14,11 @@
 			<TextView
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
-			    android:text="@string/id" />
-			<TextView
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:text="：" />
-			<TextView 
+			    android:text="@string/name" />
+			<EditText 
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content"
-			    android:id="@+id/id"/>
+			    android:id="@+id/name"/>
 	    </LinearLayout>
 	    <LinearLayout 
 	        android:orientation="horizontal"
@@ -31,15 +27,11 @@
 			<TextView
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
-			    android:text="@string/title" />
-			<TextView
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:text="：" />
-			<TextView 
+			    android:text="@string/phone" />
+			<EditText 
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content"
-			    android:id="@+id/title"/>
+			    android:id="@+id/phone"/>
 	    </LinearLayout>
 	    <LinearLayout 
 	        android:orientation="horizontal"
@@ -48,32 +40,18 @@
 			<TextView
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
-			    android:text="@string/content" />
-			<TextView
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:text="：" />
-			<TextView 
+			    android:text="@string/amount" />
+			<EditText 
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content"
-			    android:id="@+id/content"/>
+			    android:id="@+id/amount"/>
 	    </LinearLayout>
-	    <LinearLayout 
-	        android:orientation="horizontal"
+	    <Button 
 	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content">
-			<TextView
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:text="@string/foundtime" />
-			<TextView
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:text="：" />
-			<TextView 
-			    android:layout_width="match_parent"
-			    android:layout_height="wrap_content"
-			    android:id="@+id/foundtime"/>
-	    </LinearLayout>
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center"
+	        android:text="@string/btn_save"
+	        android:id="@+id/btn_save"
+	        android:onClick="save"/>
 	</LinearLayout>
 </FrameLayout>
