--- a/DsCommon/.settings/org.eclipse.wst.common.component
+++ b/DsCommon/.settings/org.eclipse.wst.common.component
@@ -8,6 +8,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.rbac"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.user"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.permit"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.org.role"/>
 		<property name="context-root" value="DsCommon"/>
 		<property name="java-output-path" value="/DsCommon/web/WEB-INF/classes"/>
 	</wb-module>
