--- a/DsCommon/.settings/org.eclipse.wst.common.component
+++ b/DsCommon/.settings/org.eclipse.wst.common.component
@@ -4,11 +4,11 @@
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
 		<wb-resource deploy-path="/" source-path="/web" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.dict"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.org"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.rbac"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.user"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.org"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.org.role"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.permit"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.user"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.user.org"/>
 		<property name="context-root" value="DsCommon"/>
 		<property name="java-output-path" value="/DsCommon/web/WEB-INF/classes"/>
 	</wb-module>
