--- a/DsWorkAndroid/res/layout/person_get_item.xml
+++ b/DsWorkAndroid/res/layout/person_get_item.xml
@@ -11,8 +11,9 @@
   	<LinearLayout 
   	    android:orientation="horizontal"
   	    android:layout_width="wrap_content"
-  	    android:layout_height="wrap_content"
-   		android:layout_marginLeft="20dp">
+  	    android:layout_height="70dp"
+  	    android:layout_toRightOf="@id/itemId"
+   		android:layout_marginLeft="50dp">
 		<TextView 
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
